--- a/source/stylesheets/_grid.scss
+++ b/source/stylesheets/_grid.scss
@@ -34,7 +34,7 @@
 .content-container--short {
 
   @media (max-width: $medium_width) {
-    padding: 6rem 2rem;
+    padding: 2rem 2rem;
   }
 }
 
