--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -6,7 +6,7 @@
   letter-spacing: 2px;
 
   @media (max-width: $medium_width) {
-    font-size: 2em;
+    font-size: 1.5em;
   }
 }
 
@@ -48,6 +48,10 @@
   font-size: 2em;
   font-weight: 300;
   margin: 0 0 .5em 0;
+
+  @media (max-width: $medium_width) {
+    font-size: 1.5em;
+  }
 }
 
 .section__title--light {
